updated with more projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -77,13 +77,56 @@
                                 <span class="card-title">Crystal Game</span>
                             </div>
                             <div class="card-content">
-                                <p> A game where a random number is generated. You must then click on one of 4 gems and try
+                                <p> A game where a random number is generated. You must then click on one of 4 gems and
+                                    try
                                     to match the random number. Each gem has its own value with the user not knowing it.
                                 </p>
                             </div>
                             <div class="card-action">
                                 <a href="https://giorgiogeorge.github.io/unit4Game/">Web Page</a>
                                 <a href="https://github.com/GiorgioGeorge/unit4Game">Code</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="row">
+                    <div class="col s12 m7">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="images/sample-1.jpg">
+                                <span class="card-title">Bamazon</span>
+                            </div>
+                            <div class="card-content">
+                                <p> sql and node shopping app, customers will see an inventory table and be able to
+                                    select an item by id and quantity to buy the inventory will then update with cost
+                                    shown
+                                </p>
+                            </div>
+                            <div class="card-action">
+                                <a href="https://github.com/GiorgioGeorge/bamazon">Web Page</a>
+                                <a href="https://github.com/GiorgioGeorge/bamazon">Code</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="row">
+                    <div class="col s12 m7">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="images/logo.png">
+                                <span class="card-title">Stock Up</span>
+                            </div>
+                            <div class="card-content">
+                                <p> Grocery list planning and management app, that has a user created shopping list and an option to search recipes.
+                                </p>
+                            </div>
+                            <div class="card-action">
+                                <a href="https://stockup-007.herokuapp.com/">Web Page</a>
+                                <a href="https://github.com/LemonSong17/Project-2">Code</a>
                             </div>
                         </div>
                     </div>
